# Langfuse-Openai-Proxy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MODELS.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  security_best_practices_report.md  skills-lock.json
.github/workflows/: ci.yml
docs/: CLAUDE_CODE_CONTRACT.md
langfuse_openai_proxy/: __init__.py  __main__.py
langfuse_openai_proxy/api/: anthropic_routes.py  app.py  dependencies.py  error_handlers.py  routes.py
langfuse_openai_proxy/domain/: anthropic_translator.py  errors.py  models.py  services.py
langfuse_openai_proxy/infrastructure/: config.py  host_validation.py  langfuse_client.py  openai_client.py
tests/: conftest.py  test_anthropic_integration.py  test_anthropic_messages.py  test_chat_think_off.py  test_config.py  test_credentials.py  test_error_handlers.py  test_health.py  test_host_validation.py  test_max_tokens_floor.py  test_models.py  test_ollama_grammar_retry.py  test_ollama_schema_sanitizer.py  test_reasoning_remap.py  test_responses.py
tests/security/: test_auth_enforcement.py  test_input_validation.py  test_path_traversal.py
